--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                         <li class="hero__list__item">
                             <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjd86-hj_v3AhUVYRgKHYX4AdAYABAAGgJsZQ&ae=2&ohost=www.google.com&cid=CAESbeD2pR39VPnjU6aN2CQLKvSv1Daimvk0uOcXY4wUmFeaCnBSzxaKhdhXAvWL25scaJClHsNCIMfogA9EQQQBrul7hNAnR7OrjufCISClAoODF4lusQqq0_aCO8ZJkGrGv5KzM7KCHFg144uVpiE&sig=AOD64_2LnqTfqlbJ3_0738hLRGSvoq1aOg&q&adurl&ved=2ahUKEwjmyqihj_v3AhWcAxAIHXOKDjMQ0Qx6BAgDEAE"
                                 target="blank">
-                                <img src="./Images/facebook.svg" width="31" height="22" alt="Social icons">
+                                <img src="./Images/facebook-hero.svg" width="31" height="22" alt="Social icons">
                             </a>
                         </li>
                         <li class="hero__list__item">
                             <a href="https://twitter.com/?lang=ru" target="blank">
-                                <img src="./Images/twitter.svg" width="31" height="32" alt="Social icons">
+                                <img src="./Images/twitter-hero.svg" width="31" height="32" alt="Social icons">
                             </a>
                         </li>
                         <li class="hero__list__item">
                             <a href="https://www.instagram.com/" target="blank">
-                                <img src="./Images/instagram.svg" width="31" height="32" alt="Social icons">
+                                <img src="./Images/instagram-heero.svg" width="31" height="32" alt="Social icons">
                             </a>
                         </li>
                     </ul>
@@ -371,7 +371,228 @@
                 </span>
             </div>
         </section>
+
+
+        <section class="changes">
+            <div class="container">
+                <div class="event__info">
+                    <h2 class="event__info__heading">Countries We Covered</h2>
+                    <div class="event__info__description changes__info">
+                        <p>
+                            Sunt autem nusquam hoc epicurus in gravissimo bello animadversionis metu degendae praesidia
+                            firmissima. Torquatos nostros? quos tu paulo ante cum teneam sententiam, quid bonum esse
+                            vult.
+                        </p>
+                    </div>
+                </div>
+
+                <ul class="changes__list">
+                    <li class="changes__list__item">
+                        <img src="./Images/changes-one.jpg" width="348" height="215" alt="">
+                        <div class="changes__box">
+                            <h3 class="changes__heading">Study in Australia</h3>
+                            <p class="changes__description">Ut aut corporis accusantium illo ullam qui laudantium.
+                                Maxime
+                                rerum sunt et sequi
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="changes__list__item">
+                        <img src="./Images/changes-two.jpg" width="348" height="215" alt="">
+                        <div class="changes__box">
+                            <h3 class="changes__heading">Study in Canada</h3>
+                            <p class="changes__description">Ut aut corporis accusantium illo ullam qui laudantium.
+                                Maxime
+                                rerum sunt et sequi
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="changes__list__item">
+                        <img src="./Images/changes-three.jpg" width="348" height="215" alt="">
+                        <div class="changes__box">
+                            <h3 class="changes__heading">Study in Uk</h3>
+                            <p class="changes__description">Ut aut corporis accusantium illo ullam qui laudantium.
+                                Maxime
+                                rerum sunt et sequi
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+
+                <span class="event__dots changes__dots">
+                    <span class="event__dots__item"></span>
+                    <span class="event__dots__item"></span>
+                    <span class="event__dots__item"></span>
+                    <span class="event__dots__item"></span>
+                </span>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="event__info">
+                    <h2 class="event__info__heading">Testimonial</h2>
+                    <div class="event__info__description changes__info">
+                        <p>
+                            Torquem detraxit hosti et quidem faciunt, ut et negent satis esse appetendum, alterum. Si
+                            sine causa? quae fuerit causa, mox videro; interea hoc epicurus in liberos.
+                        </p>
+                    </div>
+                </div>
+
+                <ul class="testimonial__list">
+                    <li class="testimonial__list__item">
+                        <div class="testimonial__box">
+                            <img src="./Images/testimonial-one.jpg" width="62" height="62" alt="">
+                            <div class="testimonial__content">
+                                <h3 class="testimonial__content__heading">Harrison Phillips</h3>
+                                <p class="testimonial__content__parag">Reporter</p>
+                            </div>
+                        </div>
+                        <p class="testimonial__description">
+                            Nisi cumque in necessitatibus molestiae eaque excepturi ab. Laboriosam ipsam voluptatem
+                            voluptatibus labore quam nihil. Quasi occaecati quos ratione quia aut molestiae velit et.
+                            Voluptatem id ea dicta inventore et quo impedit
+                        </p>
+                    </li>
+
+                    <li class="testimonial__list__item">
+                        <div class="testimonial__box">
+                            <img src="./Images/testimonial-two.jpg" width="62" height="62" alt="">
+                            <div class="testimonial__content">
+                                <h3 class="testimonial__content__heading">Ainara Vergara</h3>
+                                <p class="testimonial__content__parag">Landscape Architect</p>
+                            </div>
+                        </div>
+                        <p class="testimonial__description">
+                            Aut consectetur voluptas. Voluptatem minus quo voluptas in nulla iste. Fugiat alias sit sed
+                            dolorem quo. Qui praesentium et doloribus minima neque. Facere debitis sed est suscipit
+                            velit reprehenderit. Dolores aliquid dolore consequuntur ex.
+                        </p>
+                    </li>
+                </ul>
+
+                <span class="event__dots changes__dots">
+                    <span class="event__dots__item"></span>
+                    <span class="event__dots__item"></span>
+                    <span class="event__dots__item"></span>
+                    <span class="event__dots__item"></span>
+                </span>
+            </div>
+        </section>
+
+        <article>
+            <div class="article">
+                <div class="container">
+                    <div class="article__info">
+                        <h2 class="article__info__heading">Ready to chase your dreams?</h2>
+                        <span class="hero__button article__button">
+                            <a class="hero__button__item" href="#">Apply Online</a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </article>
     </main>
+
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="footer__box">
+                    <div class="footer__info">
+                        <a class="site__logo" href="./index.html">
+                            <img src="./Images/footer-logo.png" width="160" height="57" alt="">
+                        </a>
+                        <h2 class="footer__heading">
+                            Concord Royal Court (3rd floor)
+                            Dhanmondi, Dhaka 1209, Bangladesh.
+                        </h2>
+                        <p class="footer__description">© 2020 Executive Trade International.</p>
+                    </div>
+
+                    <ul class="footer__list">
+                        <li class="footer__list__item">
+                            <a href="#">
+                                About Us
+                            </a>
+                        </li>
+
+                        <li class="footer__list__item">
+                            <a href="#">
+                                Responsibilities
+                            </a>
+                        </li>
+
+                        <li class="footer__list__item">
+                            <a href="#">
+                                Our Services
+                            </a>
+                        </li>
+
+                        <li class="footer__list__item">
+                            <a href="#">
+                                Contact
+                            </a>
+                        </li>
+                    </ul>
+
+
+                    <ul class="footer__list">
+                        <li class="footer__list__item">
+                            <a href="#">
+                                Disclaimer
+                            </a>
+                        </li>
+
+                        <li class="footer__list__item">
+                            <a href="#">
+                                Testimonials
+                            </a>
+                        </li>
+
+                        <li class="footer__list__item">
+                            <a href="#">
+                                Privacy Policy
+                            </a>
+                        </li>
+
+                        <li class="footer__list__item">
+                            <a href="#">
+                                Terms of Service
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="footer__network">
+
+                    </div>
+
+                    <ul class="footer__network">
+                        <li class="footer__network__item">
+                            <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjd86-hj_v3AhUVYRgKHYX4AdAYABAAGgJsZQ&ae=2&ohost=www.google.com&cid=CAESbeD2pR39VPnjU6aN2CQLKvSv1Daimvk0uOcXY4wUmFeaCnBSzxaKhdhXAvWL25scaJClHsNCIMfogA9EQQQBrul7hNAnR7OrjufCISClAoODF4lusQqq0_aCO8ZJkGrGv5KzM7KCHFg144uVpiE&sig=AOD64_2LnqTfqlbJ3_0738hLRGSvoq1aOg&q&adurl&ved=2ahUKEwjmyqihj_v3AhWcAxAIHXOKDjMQ0Qx6BAgDEAE"
+                                target="blank">
+                                <img src="./Images/facebook.svg" width="16" height="16" alt="">
+                            </a>
+                        </li>
+
+                        <li class="footer__network__item">
+                            <a href="https://twitter.com/?lang=ru" target="blank">
+                                <img src="./Images/twitter.svg" width="16" height="16" alt="">
+                            </a>
+                        </li>
+
+                        <li class="footer__network__item">
+                            <a href="https://www.instagram.com/" target="blank">
+                                <img src="./Images/instagram.svg" width="16" height="16" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
