--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="hero__info">
                             <div class="hero__info__contents">
                                 <h1 class="hero__info__heading">
-                                    We Help to <span style="color: #717CFF;">Build</span>
+                                    We Help to <span style="color: #717CFF;">Build</span> <br>
                                     Your Dream
                                 </h1>
                                 <p class="hero__info__description">
