--- a/index.html
+++ b/index.html
@@ -94,14 +94,22 @@
             <div class="container">
                 <h2 class="university__heading">Featured Universities</h2>
                 <div class="university__logos">
-                    <img class="university__logos__image" src="./Images/university-one.png" width="226" height="68"
-                        alt="The Best University's logo">
-                    <img class="university__logos__image" src="./Images/university-two.png" width="226" height="68"
-                        alt="The Best University's logo">
-                    <img class="university__logos__image" src="./Images/university-three.png" width="226" height="68"
-                        alt="The Best University's logo">
-                    <img class="university__logos__image" src="./Images/university-four.png" width="226" height="68"
-                        alt="The Best University's logo">
+                    <a href="https://www.mq.edu.au/">
+                        <img class="university__logos__image" src="./Images/university-one.png" width="226" height="68"
+                            alt="The Best University's logo">
+                    </a>
+                    <a href="https://www.csu.edu.au/">
+                        <img class="university__logos__image" src="./Images/university-two.png" width="226" height="68"
+                            alt="The Best University's logo">
+                    </a>
+                    <a href="https://www.ncl.ac.uk/">
+                        <img class="university__logos__image" src="./Images/university-three.png" width="226"
+                            height="68" alt="The Best University's logo">
+                    </a>
+                    <a href="https://www.latrobe.edu.au/">
+                        <img class="university__logos__image" src="./Images/university-four.png" width="226" height="68"
+                            alt="The Best University's logo">
+                    </a>
                 </div>
 
                 <span class="event__dots university__dots">
@@ -178,10 +186,48 @@
                                     alt="Icon navigation to right">
                             </div>
                         </li>
+
+                        <li class="services__list__item">
+                            <img src="./Images/services-four.svg" width="76" height="76"
+                                alt="Checked documentation image">
+                            <h3 class="services__list__subheading">Visa Consultancy</h3>
+                            <div class="services__list__box">
+                                <p class="services__list__description">
+                                    Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. dicta
+                                    accusantium
+                                    fugiat.
+                                </p>
+                            </div>
+                            <div class="event__list__bottom__box">
+                                <a href="#">Learn More</a>
+                                <img src="./Images/icon-navigation.svg" width="24" height="24"
+                                    alt="Icon navigation to right">
+                            </div>
+                        </li>
+
+                        <li class="services__list__item">
+                            <img src="./Images/services-five.svg" width="76" height="76"
+                                alt="Checked documentation image">
+                            <h3 class="services__list__subheading">Visa Consultancy</h3>
+                            <div class="services__list__box">
+                                <p class="services__list__description">
+                                    Maiores voluptas laboriosam non dolorum perferendis fuga repellat aut. dicta
+                                    accusantium
+                                    fugiat.
+                                </p>
+                            </div>
+                            <div class="event__list__bottom__box">
+                                <a href="#">Learn More</a>
+                                <img src="./Images/icon-navigation.svg" width="24" height="24"
+                                    alt="Icon navigation to right">
+                            </div>
+                        </li>
                     </ul>
 
 
-                    <ul class="services__list__bottom">
+
+
+                    <!-- <ul class="services__list__bottom">
                         <li class="services__list__item services__list__item-four">
                             <img src="./Images/services-four.svg" width="76" height="76" alt="Home image">
                             <h3 class="services__list__subheading">Accommodation</h3>
@@ -215,7 +261,7 @@
                                     alt="Icon navigation to right">
                             </div>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </section>
@@ -502,10 +548,10 @@
                         <a class="site__logo" href="./index.html">
                             <img src="./Images/footer-logo.png" width="160" height="57" alt="">
                         </a>
-                        <h2 class="footer__heading">
+                        <p class="footer__heading">
                             Concord Royal Court (3rd floor)
                             Dhanmondi, Dhaka 1209, Bangladesh.
-                        </h2>
+                        </p>
                         <p class="footer__description">© 2020 Executive Trade International.</p>
                     </div>
 
